--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
         <!-- Message Screen 3 -->
         <div id="message-3" class="screen message-screen">
             <p class="message-text">...และนี่คือความรู้สึกจากใจ</p>
-            <button class="next-button" onclick="showScreen(7)">ดูคำอวยพร</button>
+            <button class="next-button" onclick="showScreen(7)">กดดูสิ</button>
         </div>
 
         <!-- Screen 4: Final Message -->
