--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         // ⚠️ ปรับแต่งชื่อในส่วนนี้ได้เลยครับ ⚠️
         const config = {
             partnerName: "อุ๋ม",
-            senderName: "แฟนของคุณ"
+            senderName: "แฟนของเจ้า"
         };
 
         // --- GLOBAL STATE ---
